Fixing Styling on Mobile

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,13 @@ layout {
   object-fit: contain;
   transform: scale(20);
 }
-
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
 /*
 #root {
   max-width: 1280px;
